recursion.cons.ismember.IsMember.scala.error
Compilation error:
IsMember:7: error: ';' expected but 'else' found.
  else{
  ^IsMember:12: error: Unmatched closing brace '}' ignored here
}
^